fix doc string padding that caused y scrollbar

--- a/react/javascript/src/components/gherkin/DocString.module.scss
+++ b/react/javascript/src/components/gherkin/DocString.module.scss
@@ -2,6 +2,7 @@
 
 .docString {
     color: $docstringColor;
+    padding-bottom: 0.25em;
     overflow-x: auto;
 
     &::before,
